--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,3 @@
 install: 
   - FILE="-Dfile=core-release.aar" 
-  - mvn install:install-file $FILE -DgroupId=com.lb.mediasoup -DartifactId=android -Dversion=1.0 -Dpackaging=aar -DpomFile=pom.xml
+  - mvn install:install-file $FILE -DgroupId=com.github.zujonow -DartifactId=mediasoup-android -Dversion=1.0 -Dpackaging=aar -DpomFile=pom.xml
